// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Text prop "children" 1`] = `
<span
  class="r-ui-text-1ntzlq4 r-ui-textHasAncestor-z2plr"
  data-testid="child"
  dir="auto"
/>
`;

exports[`components/Text prop "onPress" 1`] = `
<div
  className="r-ui-text-1ntzlq4 r-ui-textIsRoot-gw3a6r r-cursor-1loqt21"
  data-focusable={true}
  dir="auto"
  onClick={[Function]}
  onKeyDown={[Function]}
  tabIndex="0"
/>
`;

exports[`components/Text prop "selectable" 1`] = `
<div
  className="r-ui-text-1ntzlq4 r-ui-textIsRoot-gw3a6r"
  dir="auto"
/>
`;

exports[`components/Text prop "selectable" 2`] = `
<div
  className="r-ui-text-1ntzlq4 r-ui-textIsRoot-gw3a6r r-userSelect-lrvibr"
  dir="auto"
/>
`;
